welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:4: error: ';' expected but 'if' found.
  } if (litMessage=="B"){
    ^