welcome.lessons.welcome.bdr.BDR.scala.code
while (estSurMessage()){
  if (litMessage=="A") {
    avance();
  } if (litMessage=="B"){
    avance(2);
  } if (litMessage=="L"){
    gauche();
  } if (litMessage=="R"){
    droite();
  } if (litMessage=="Z"){
    recule();
  } if (litMessage=="X"){
    recule(3);
  } if (litMessage=="I"){
    retourne();  
    avanve();
  }
}